<resources>
    <string name="app_name">Story App</string>
    <string name="home_title">Home</string>
    <string name="add_story_title">Add Story</string>
    <string name="settings_title">Settings</string>
    <string name="empty_input">Input data can\'t be empty</string>
    <string name="cannot_connect_to_server">Can\'t connect to server</string>
    <string name="incorrect_confirmation_password">Incorrect confirmation password</string>
    <string name="empty_photo">Photo can\'t be empty</string>
    <string name="post_description_hint">Your post description</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter your name</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="you_will_be_logged_out">You\'ll be Logged Out</string>
    <string name="log_out_of_your_account">Log out of your account?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="post">Post</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="user_profile_photo">User profile photo</string>
    <string name="user_post_photo">User post photo</string>
    <string name="log_out_of_your_account_description">Log out of your account</string>
    <string name="back_to_previous_menu">Back to previous menu</string>
    <string name="story_app_application_logo">Story App application logo</string>
    <string name="post_photo_from_gallery">Post photo from gallery</string>
    <string name="post_photo_from_camera">Post photo from camera</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="story_post_location">Story Post Location</string>
    <string name="show_current_location">Show current location</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="refresh_list_stories">Refresh list stories</string>
</resources>