<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/white"
    app:contentPadding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/log_out_of_your_account_description"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_will_be_logged_out"
                android:textSize="14sp"
                android:textColor="@color/red"
                android:fontFamily="@font/inter_semi_bold"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/log_out_of_your_account"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_semi_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:text="@string/no"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_semi_bold" />

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:text="@string/yes"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_semi_bold"
                android:background="@drawable/bg_btn_red"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>