<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/story_app_application_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:hintEnabled="false"
        app:cursorColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/iv_app_logo">

        <com.bangkit.storyapp.ui.auth.customview.EmailInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_border_black"
            android:fontFamily="@font/inter_medium"
            android:paddingHorizontal="16dp"
            android:hint="@string/enter_email"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:cursorColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/layout_login_email">

        <com.bangkit.storyapp.ui.auth.customview.PasswordInputEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_border_black"
            android:fontFamily="@font/inter_medium"
            android:paddingHorizontal="16dp"
            android:hint="@string/enter_password"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_grey_blue"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_login_password">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/inter_medium"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="gone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_border_grey_blue"
        android:gravity="center"
        android:fontFamily="@font/inter_medium"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="#384959"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>