<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back_to_previous_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/add_story_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ib_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_gallery"
            android:contentDescription="@string/post_photo_from_gallery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ib_camera"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/post_photo_from_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_line_one"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/line_color"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/iv_add_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_place_holder_image"
        android:contentDescription="@string/user_post_photo"
        app:layout_constraintTop_toBottomOf="@id/view_line_one"/>

    <View
        android:id="@+id/view_line_two"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/line_color"
        app:layout_constraintTop_toBottomOf="@id/iv_add_photo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_white"
        android:fontFamily="@font/inter_medium"
        android:paddingHorizontal="16dp"
        android:hint="@string/post_description_hint"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:maxLines="5"
        android:singleLine="false"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        app:layout_constraintTop_toBottomOf="@id/view_line_two"/>

    <LinearLayout
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_btn_grey_blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/inter_medium"
            android:text="@string/add_story_title"
            android:textSize="16sp"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/pb_add"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>